{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 26,
  "lineage": "e0ad36cb-4ef7-81e2-6ed5-7ad1430f23e3",
  "resources": [
    {
      "module": "module.kubernetes_apps[\"bar\"]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/bar-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/",
                  "nginx.ingress.kubernetes.io/weight": "25"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "bar-ingress",
                "namespace": "default",
                "resource_version": "16052",
                "uid": "822b0462-0096-486f-8fb1-30645ff08430"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx-custom",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bar",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/bar",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_apps[\"bar\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/bar",
            "metadata": [
              {
                "generation": 0,
                "name": "bar",
                "namespace": "default",
                "resource_version": "9581",
                "uid": "7cdd3aaa-f69f-4a34-9340-45222039bb21"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.198.206",
                "cluster_ips": [
                  "10.108.198.206"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "bar"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_apps[\"boom\"]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/boom-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/",
                  "nginx.ingress.kubernetes.io/weight": "50"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "boom-ingress",
                "namespace": "default",
                "resource_version": "16053",
                "uid": "cb3347c4-054a-4031-8b88-26ef42b1beb3"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx-custom",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "boom",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/boom",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_apps[\"boom\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/boom",
            "metadata": [
              {
                "generation": 0,
                "name": "boom",
                "namespace": "default",
                "resource_version": "9587",
                "uid": "daaf44f1-74fc-4c76-91f4-52908defc3d8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.111.43.69",
                "cluster_ips": [
                  "10.111.43.69"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "boom"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_apps[\"foo\"]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/foo-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/",
                  "nginx.ingress.kubernetes.io/weight": "25"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "foo-ingress",
                "namespace": "default",
                "resource_version": "16051",
                "uid": "3c0ab6a6-0f5c-40bd-8ada-2070b66d0715"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx-custom",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "foo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/foo",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_apps[\"foo\"]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/foo",
            "metadata": [
              {
                "generation": 0,
                "name": "foo",
                "namespace": "default",
                "resource_version": "9579",
                "uid": "0b6e7725-d283-4e33-8e7e-12762b8b4f02"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.101.137.115",
                "cluster_ips": [
                  "10.101.137.115"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "foo"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "helm_release.nginx_ingress",
            "time_sleep.wait_for_ingress"
          ]
        }
      ]
    }
  ]
}